test/error/iface/err3.rzy

Err3 = Component
  funcA : response():Boolean;
composition
end

